Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  css for truncation

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2349,6 +2349,13 @@ div.vslider-item[aria-hidden="true"]{
 	display:-webkit-box;
 	-webkit-line-clamp: 3;
 	-webkit-box-orient:vertical;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 200px;
+  /* Beginning of string */
+  direction: rtl;
+  text-align: left;
 }
 
 
